[gd_scene load_steps=34 format=2]

[ext_resource path="res://image/opp3.png" type="Texture" id=1]
[ext_resource path="res://scenes/gameplay/Boss/BossArea2D.gd" type="Script" id=2]
[ext_resource path="res://scenes/gameplay/Boss/1_BossBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://image/enem.png" type="Texture" id=4]
[ext_resource path="res://image/boss_mouse.png" type="Texture" id=5]
[ext_resource path="res://image/boss_side.png" type="Texture" id=6]
[ext_resource path="res://image/me.png" type="Texture" id=7]
[ext_resource path="res://image/oppo_boss.png" type="Texture" id=8]
[ext_resource path="res://image/torchmap.png" type="Texture" id=9]
[ext_resource path="res://scenes/gameplay/Boss/Boss_T_PopSys.gd" type="Script" id=10]
[ext_resource path="res://scenes/gameplay/Boss/Boss_Torpedo.tscn" type="PackedScene" id=11]
[ext_resource path="res://image/boss_dead.png" type="Texture" id=12]
[ext_resource path="res://sound/魔王魂  炎04.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/魔王魂  闇01.wav" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 363.5, 190 )

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DeadSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 252, 123 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeadSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.431373, 0.431373, 0.431373, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeadSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=41]
resource_name = "dead"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("DeadSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Vector2( 252, 123 ), Vector2( 252, 523 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeadSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 3.4, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.431373, 0.431373, 0.431373, 1 ), Color( 0.431373, 0.431373, 0.431373, 0.0941176 ), Color( 0.431373, 0.431373, 0.431373, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Body")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DeadSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("DamageShape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=38]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=39]
resource_name = "gyorai"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=37]
resource_name = "bigshot"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "big_shot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shot:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Opp3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OppoBoss:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BossSide:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Me:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -94.25, 22.5 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "default"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Opp3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OppoBoss:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 2.1, 3 ),
"transitions": PoolRealArray( 1, -2, 1, 0.5 ),
"update": 0,
"values": [ 0.0, 7.0, -6.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BossSide:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 2.4, 3 ),
"transitions": PoolRealArray( 1, -2, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0, -4.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Me:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 2, -2 ),
"update": 0,
"values": [ Vector2( -94.25, 22.5 ), Vector2( -71, 15.75 ) ]
}

[sub_resource type="RayShape2D" id=33]
length = 1446.0

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, -20, 0 )
initial_velocity = -2.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 39.22
radial_accel = 41.17
radial_accel_random = 0.63
scale = 0.3
scale_random = 0.87

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/buble.png-1278c928bdc64a4f08dc5a1343d12857.stex"

[sub_resource type="Gradient" id=29]
offsets = PoolRealArray( 0.0434783, 0.0993789, 0.347826 )
colors = PoolColorArray( 1, 0.725105, 0.464844, 1, 0.553062, 0.968453, 0.99707, 1, 0.868759, 0.873792, 0.942383, 1 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 29 )

[sub_resource type="Curve" id=30]
_data = [ Vector2( 0.0163043, 0.932663 ), 0.0, 0.0, 0, 0, Vector2( 0.309783, 0.859935 ), -1.00979, -1.00979, 0, 0, Vector2( 0.961957, 0.293292 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 30 )

[sub_resource type="Curve" id=31]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=28]
curve = SubResource( 31 )

[sub_resource type="ParticlesMaterial" id=32]
lifetime_randomness = 0.45
trail_size_modifier = SubResource( 28 )
emission_shape = 1
emission_sphere_radius = 32.25
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, -30, 0 )
initial_velocity = 138.31
initial_velocity_random = 0.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 13.73
damping = 100.0
damping_random = 0.36
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 26 )
color_ramp = SubResource( 25 )

[node name="BossArea2D" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="DamageShape" type="CollisionShape2D" parent="."]
position = Vector2( 240.5, -35 )
shape = SubResource( 1 )

[node name="DeadSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
position = Vector2( 252, 123 )
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )

[node name="DeadAnimationPlayer" type="AnimationPlayer" parent="DeadSprite"]
root_node = NodePath("../..")
anims/RESET = SubResource( 40 )
anims/dead = SubResource( 41 )

[node name="Body" type="Node2D" parent="."]
modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
position = Vector2( 203, -100 )
scale = Vector2( 4, 4 )

[node name="CanonInTimer" type="Timer" parent="Body"]
wait_time = 0.3

[node name="Opp3" type="Sprite" parent="Body"]
position = Vector2( -50.5, 14.75 )
texture = ExtResource( 1 )
offset = Vector2( 89.75, -26.5 )

[node name="PopSys" type="Node2D" parent="Body/Opp3"]
position = Vector2( 18.25, -16 )
script = ExtResource( 10 )
Fish = ExtResource( 11 )
min_num = 5
max_num = 7

[node name="Sprite" type="Sprite" parent="Body/Opp3/PopSys"]

[node name="Timer" type="Timer" parent="Body/Opp3/PopSys"]
wait_time = 8.0

[node name="gyorai" type="AudioStreamPlayer2D" parent="Body/Opp3/PopSys"]
stream = ExtResource( 13 )

[node name="GyoraiAnimationPlayer" type="AnimationPlayer" parent="Body/Opp3"]
anims/RESET = SubResource( 38 )
anims/gyorai = SubResource( 39 )

[node name="Mainbody" type="Sprite" parent="Body"]
texture = ExtResource( 4 )

[node name="BossSide" type="Sprite" parent="Body"]
position = Vector2( -20.25, 32.25 )
texture = ExtResource( 6 )
offset = Vector2( 37.75, 20.25 )

[node name="BossMouse" type="Sprite" parent="Body"]
position = Vector2( -65.5, 33.75 )
texture = ExtResource( 5 )
offset = Vector2( -19.5, 8.75 )

[node name="Bigshot_AnimationPlayer" type="AnimationPlayer" parent="Body/BossMouse"]
anims/RESET = SubResource( 36 )
anims/bigshot = SubResource( 37 )

[node name="Bigshot_Position2D" type="Position2D" parent="Body/BossMouse"]
position = Vector2( -15.2894, -6.51795 )
rotation = 0.523599

[node name="shot" type="AudioStreamPlayer" parent="Body/BossMouse"]
stream = ExtResource( 14 )
volume_db = -10.0
pitch_scale = 0.53

[node name="OppoBoss" type="Sprite" parent="Body"]
position = Vector2( 54.75, 12 )
texture = ExtResource( 8 )
offset = Vector2( 41.25, -20.25 )

[node name="Me" type="Sprite" parent="Body"]
position = Vector2( -94.25, 22.5 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="Body/Me"]
show_behind_parent = true
light_mask = 31
position = Vector2( -92.767, 0.254925 )
rotation = 3.14159
scale = Vector2( 0.304, 0.4 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
autoplay = "default"
anims/RESET = SubResource( 34 )
anims/default = SubResource( 35 )

[node name="ShotArea2D" type="Area2D" parent="Body"]
position = Vector2( -50.75, 25 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/ShotArea2D"]
rotation = 1.5708
shape = SubResource( 33 )

[node name="ShotTimer" type="Timer" parent="Body/ShotArea2D"]
wait_time = 5.0
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 342, -76 )
scale = Vector2( 2, 2 )
amount = 10
lifetime = 0.6
local_coords = false
process_material = SubResource( 5 )
texture = SubResource( 6 )

[node name="Particles2D2" type="Particles2D" parent="Particles2D"]
position = Vector2( -56, -9 )
scale = Vector2( 2, 2 )
emitting = false
amount = 31
lifetime = 4.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.45
process_material = SubResource( 32 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.204
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_BossArea2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_BossArea2D_area_exited"]
[connection signal="timeout" from="Body/CanonInTimer" to="." method="_on_CanonInTimer_timeout"]
[connection signal="timeout" from="Body/Opp3/PopSys/Timer" to="Body/Opp3/PopSys" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Body/ShotArea2D" to="." method="_on_ShotArea2D_area_entered"]
[connection signal="timeout" from="Body/ShotArea2D/ShotTimer" to="." method="_on_ShotTimer_timeout"]
